tests.txt
Testing CS5011 P3 Practical
- Looking for submission in a directory called 'src': found at 'CS5011-P3/src'
* BUILD TEST - build-all : fail
--- submission output ---
./General/Utility.java:20: error: cannot find symbol
    private static void printFrontier(Collection<Node> frontier) {
                                      ^
  symbol:   class Collection
  location: class Utility
./Algorithms/PartA_BFS.java:31: error: printFrontier(<any>) has private access in Utility
            Utility.printFrontier(frontier);
                   ^
./Algorithms/PartA_DFS.java:32: error: printFrontier(<any>) has private access in Utility
            Utility.printFrontier(frontier);
                   ^
3 errors
---

0 out of 1 tests passed
Building is failing, so some tests were skipped
